--- a/Informacion.html
+++ b/Informacion.html
@@ -71,7 +71,7 @@
 
             <article class="article">
                 <h2>Formas de pago:</h2>
-                <p>Contamos con diferentes formas de pago: <br>·Para Venezuela contamos con #####. <br>·Para España contamos con #####. <br>·Para Colombia contamos con #####. <br>·Para Estados Unidos contamos con #####.</p>
+                <p>Contamos con diferentes formas de pago: <br>·Para Venezuela contamos con BDV (Banco de Venezuela). <br>·Para España contamos con BBVA. <br>·Para Colombia contamos con Nequi. <br>·Para Estados Unidos contamos con Zelle. <br>·Para Internacional contamos con Paypal.</p>
 
             </article>
 
