--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="container-menu">
             <div class="cont-menu">
                 <nav>
-                    <a href="#">Catalogo Diamantes</a>
-                    <a href="#">Catalogo Empresas</a>
-                    <a href="#">Catalogo Rangos</a>
+                    <a href="https://fworld22.github.io/">Catalogo Diamantes</a>
+                    <a href="https://fyword.github.io/">Catalogo Negocios</a>
+                    <a href="https://fnyworld.github.io/">Catalogo Empresas</a>
                     <a href="Informacion.html">Informacion</a>
                     
 
