--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="container-menu">
             <div class="cont-menu">
                 <nav>
-                    <a href="https://fworld22.github.io/">Catalogo Diamantes</a>
-                    <a href="https://fyword.github.io/">Catalogo Negocios</a>
-                    <a href="https://fnyworld.github.io/">Catalogo Empresas</a>
-                    <a href="Informacion.html">Informacion</a>
+                    <a href="https://fworld22.github.io/">Catalogo Diamantes <p>💎</p></a>
+                    <a href="https://fyword.github.io/">Catalogo Negocios <p>💸</p></a>
+                    <a href="https://fnyworld.github.io/">Catalogo Empresas <p>🏢</p></a>
+                    <a href="Informacion.html">Informacion <p>ℹ️</p></a>
                     
 
                 </nav>
